nn2nfa/nn_model/parser/ToyNNetParser.py
# Generated from ToyNNet.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ToyNNetParser ( Parser ):

    grammarFileName = "ToyNNet.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "';'", "'('", "','", "')'", "'['", 
                     "']'", "<INVALID>", "<INVALID>", "<INVALID>", "'input_size'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NUMBER", "RELU", "ID", "INPUTKEY", "COMMENT", "WHITESPACE", 
                      "NEWLINE" ]

    RULE_toy_nnet = 0
    RULE_nnet_input = 1
    RULE_layer = 2
    RULE_neuron = 3
    RULE_weights = 4
    RULE_activation = 5

    ruleNames =  [ "toy_nnet", "nnet_input", "layer", "neuron", "weights", 
                   "activation" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    NUMBER=8
    RELU=9
    ID=10
    INPUTKEY=11
    COMMENT=12
    WHITESPACE=13
    NEWLINE=14

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Toy_nnetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nnet_input(self):
            return self.getTypedRuleContext(ToyNNetParser.Nnet_inputContext,0)


        def EOF(self):
            return self.getToken(ToyNNetParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ToyNNetParser.NEWLINE)
            else:
                return self.getToken(ToyNNetParser.NEWLINE, i)

        def layer(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ToyNNetParser.LayerContext)
            else:
                return self.getTypedRuleContext(ToyNNetParser.LayerContext,i)


        def getRuleIndex(self):
            return ToyNNetParser.RULE_toy_nnet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterToy_nnet" ):
                listener.enterToy_nnet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitToy_nnet" ):
                listener.exitToy_nnet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitToy_nnet" ):
                return visitor.visitToy_nnet(self)
            else:
                return visitor.visitChildren(self)




    def toy_nnet(self):

        localctx = ToyNNetParser.Toy_nnetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_toy_nnet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ToyNNetParser.NEWLINE:
                self.state = 12
                self.match(ToyNNetParser.NEWLINE)
                self.state = 17
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 18
            self.nnet_input()
            self.state = 25 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 20 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 19
                        self.match(ToyNNetParser.NEWLINE)
                        self.state = 22 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==ToyNNetParser.NEWLINE):
                            break

                    self.state = 24
                    self.layer()

                else:
                    raise NoViableAltException(self)
                self.state = 27 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ToyNNetParser.NEWLINE:
                self.state = 29
                self.match(ToyNNetParser.NEWLINE)
                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 35
            self.match(ToyNNetParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Nnet_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUTKEY(self):
            return self.getToken(ToyNNetParser.INPUTKEY, 0)

        def NUMBER(self):
            return self.getToken(ToyNNetParser.NUMBER, 0)

        def getRuleIndex(self):
            return ToyNNetParser.RULE_nnet_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNnet_input" ):
                listener.enterNnet_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNnet_input" ):
                listener.exitNnet_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNnet_input" ):
                return visitor.visitNnet_input(self)
            else:
                return visitor.visitChildren(self)




    def nnet_input(self):

        localctx = ToyNNetParser.Nnet_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_nnet_input)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(ToyNNetParser.INPUTKEY)
            self.state = 38
            self.match(ToyNNetParser.T__0)
            self.state = 39
            self.match(ToyNNetParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LayerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def neuron(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ToyNNetParser.NeuronContext)
            else:
                return self.getTypedRuleContext(ToyNNetParser.NeuronContext,i)


        def getRuleIndex(self):
            return ToyNNetParser.RULE_layer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayer" ):
                listener.enterLayer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayer" ):
                listener.exitLayer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLayer" ):
                return visitor.visitLayer(self)
            else:
                return visitor.visitChildren(self)




    def layer(self):

        localctx = ToyNNetParser.LayerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_layer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 41
                    self.neuron()
                    self.state = 42
                    self.match(ToyNNetParser.T__1) 
                self.state = 48
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 49
            self.neuron()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NeuronContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def weights(self):
            return self.getTypedRuleContext(ToyNNetParser.WeightsContext,0)


        def NUMBER(self):
            return self.getToken(ToyNNetParser.NUMBER, 0)

        def activation(self):
            return self.getTypedRuleContext(ToyNNetParser.ActivationContext,0)


        def getRuleIndex(self):
            return ToyNNetParser.RULE_neuron

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNeuron" ):
                listener.enterNeuron(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNeuron" ):
                listener.exitNeuron(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNeuron" ):
                return visitor.visitNeuron(self)
            else:
                return visitor.visitChildren(self)




    def neuron(self):

        localctx = ToyNNetParser.NeuronContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_neuron)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(ToyNNetParser.T__2)
            self.state = 52
            self.weights()
            self.state = 53
            self.match(ToyNNetParser.T__3)
            self.state = 54
            self.match(ToyNNetParser.NUMBER)
            self.state = 55
            self.match(ToyNNetParser.T__3)
            self.state = 56
            self.activation()
            self.state = 57
            self.match(ToyNNetParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WeightsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(ToyNNetParser.NUMBER)
            else:
                return self.getToken(ToyNNetParser.NUMBER, i)

        def getRuleIndex(self):
            return ToyNNetParser.RULE_weights

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWeights" ):
                listener.enterWeights(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWeights" ):
                listener.exitWeights(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWeights" ):
                return visitor.visitWeights(self)
            else:
                return visitor.visitChildren(self)




    def weights(self):

        localctx = ToyNNetParser.WeightsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_weights)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(ToyNNetParser.T__5)
            self.state = 64
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 60
                    self.match(ToyNNetParser.NUMBER)
                    self.state = 61
                    self.match(ToyNNetParser.T__3) 
                self.state = 66
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 67
            self.match(ToyNNetParser.NUMBER)
            self.state = 68
            self.match(ToyNNetParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActivationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RELU(self):
            return self.getToken(ToyNNetParser.RELU, 0)

        def ID(self):
            return self.getToken(ToyNNetParser.ID, 0)

        def getRuleIndex(self):
            return ToyNNetParser.RULE_activation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActivation" ):
                listener.enterActivation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActivation" ):
                listener.exitActivation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActivation" ):
                return visitor.visitActivation(self)
            else:
                return visitor.visitChildren(self)




    def activation(self):

        localctx = ToyNNetParser.ActivationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_activation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            _la = self._input.LA(1)
            if not(_la==ToyNNetParser.RELU or _la==ToyNNetParser.ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





